--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,10 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
+    <meta-data
+        android:name="com.google.android.maps.v2.API_KEY"
+        android:value="AIzaSyANBrAIw1ttBmYlcdTRNEbk81kKHee2qjU" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -24,10 +28,10 @@
             android:name=".Maps"
             android:label="@string/title_activity_maps" >
         </activity>
+        <activity
+            android:name=".ToDo"
+            android:label="@string/title_activity_to_do" >
+        </activity>
     </application>
-
-    <meta-data
-        android:name="com.google.android.maps.v2.API_KEY"
-        android:value="AIzaSyANBrAIw1ttBmYlcdTRNEbk81kKHee2qjU" />
 
 </manifest>
