--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,4 +24,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:22.2.0'
     compile 'com.google.android.gms:play-services:7.5.0'
     compile 'com.github.dexafree:materiallist:2.4.5'
+    compile 'com.android.support:cardview-v7:+'
+    compile 'com.squareup.okhttp:okhttp:2.4.0'
 }
