--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="nyteam.c4q.nyc.nynow" >
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
@@ -29,6 +30,10 @@
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="AIzaSyANBrAIw1ttBmYlcdTRNEbk81kKHee2qjU" />
 
+        <activity
+            android:name=".Dummy"
+            android:label="@string/title_activity_dummy" >
+        </activity>
     </application>
 
 </manifest>
