--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,5 @@ dependencies {
     compile 'com.github.dexafree:materiallist:2.4.5'
     compile 'com.android.support:cardview-v7:+'
     compile 'com.squareup.okhttp:okhttp:2.4.0'
+    compile 'com.jakewharton:butterknife:6.1.0'
 }
